<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroun_detailed_activity"
    tools:context=".ui.activities.detailedInfoScenes.DetailedInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewImage"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="5dp">

                        <ImageView
                            android:id="@+id/imageViewCharacter"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/no_internet" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="156dp"
                        android:layout_marginLeft="156dp"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/main_font"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="#005d04"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="4dp"
                        tools:text="Toxic Rick" />

                    <TextView
                        android:id="@+id/textViewSpecies"
                        style="@style/StyleForTheBaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="156dp"
                        android:layout_marginLeft="156dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center_horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/textViewName"
                        tools:layout_editor_absoluteX="160dp"
                        tools:text="Human" />

                    <TextView
                        android:id="@+id/textViewGender"
                        style="@style/StyleForTheBaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="156dp"
                        android:layout_marginLeft="156dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/textViewSpecies"
                        tools:layout_editor_absoluteX="160dp"
                        tools:text="Man" />

                    <TextView
                        android:id="@+id/textViewStatus"
                        style="@style/StyleForTheBaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="156dp"
                        android:layout_marginLeft="156dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewGender"
                        tools:text="Alive" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewMain"
                tools:layout_editor_absoluteX="20dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/StyleForTheInformationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/information"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewDisplayType"
                        style="@style/StyleForTheBaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="12dp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:text="Type missing" />

                    <TextView
                        android:id="@+id/textViewType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"

                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/type"
                        android:textColor="#959595"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayType" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/border_purple_square"
                        android:contentDescription="@string/border"
                        app:layout_constraintTop_toBottomOf="@+id/textViewType" />

                    <TextView
                        android:id="@+id/textViewDisplayCreatedCharacter"
                        style="@style/StyleForTheBaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="12dp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                        tools:layout_editor_absoluteX="15dp"
                        tools:text="01,02,2002\n 15:44:44" />

                    <TextView
                        android:id="@+id/textViewCreatedCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/when_character_created"
                        android:textColor="#959595"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayCreatedCharacter" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/border_purple_square"
                        android:contentDescription="@string/border"
                        app:layout_constraintTop_toBottomOf="@+id/textViewCreatedCharacter" />

                    <TextView
                        android:id="@+id/textViewDisplayListOfEpisode"
                        style="@style/StyleForTheBaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="12dp"
                        android:gravity="start"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/imageView"
                        tools:layout_editor_absoluteX="15dp"
                        tools:text="episode" />

                    <TextView
                        android:id="@+id/textViewListOfEpisode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/list_of_episode"
                        android:textColor="#959595"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayListOfEpisode" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
